--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,8 +1,10 @@
 FROM alpine:3.15
 
 # update and install nginx server
-RUN apk update
-    apk upgrade
-    apk add nginx
+RUN	apk update && \
+	apk upgrade && \ 
+	apk add nginx && \
+	mkdir -p /run/nginx	
+COPY	conf/nginx.conf /etc/nginx/conf.d/default.conf
 
 CMD ["nginx", "-g", "daemon off;"]
