--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -7,4 +7,4 @@ RUN	apk update && \
 	mkdir -p /run/nginx	
 COPY	conf/nginx.conf /etc/nginx/conf.d/default.conf
 
-CMD	nginx -g daemon off;
+CMD	["nginx", "-g", "daemon off;"]
