--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,11 @@
 server {
-	listen				80;
-	listen				[::]:80;
-	server_name			localhost www.localhost;
-	return				301 https://$server_name$request_uri;
+    listen                  80;
+    root                    /www;
+    index                   index.html index.htm;
+    server_name             localhost;
+    client_max_body_size    32m;
+    error_page              500 502 503 504  /50x.html;
+    location = /50x.html {
+          root              /var/lib/nginx/html;
+    }
 }
