--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,10 +4,9 @@ FROM alpine:3.15
 RUN	apk update && \
 	apk upgrade && \ 
 	apk add nginx && \
-	adduser -D -g 'www' www && \
 	mkdir -p /www && \
-	chown -R www:www /var/lib/nginx && \
-	chown -R www:www /www
+	chown -R nginx:nginx /var/lib/nginx && \
+	chown -R nginx:nginx /www
 
 COPY	conf/nginx.conf /etc/nginx/http.d/nginx.conf
 COPY	index.html /www
