--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,8 +1,12 @@
 server {
-    listen                  80;
+    listen                  443 ssl;
+    ssl on;
+    ssl_certificate /ssl/jboumal.42.fr.crt;
+    ssl_certificate_key /ssl/jboumal.42.fr.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
     root                    /www;
     index                   index.html index.htm;
-    server_name             localhost;
+    server_name             jboumal.42.fr;
     client_max_body_size    32m;
     error_page              500 502 503 504  /50x.html;
     location = /50x.html {
