--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,18 +1,52 @@
-version: '3'
-
+version: "3"
 services:
   nginx:
     container_name: nginx
-    build: ./requirements/nginx
-    ports:
-      - 80:80
-      - 443:443
+    build:
+      context: requirements/nginx
+      dockerfile: Dockerfile
+    restart : always
     volumes:
-      - wordpress:/var/www/html
-    restart: always
+      - /home/bperraud/data/wordpress:/var/www/html
+    ports:
+      - "443:443"
     networks:
-      - network
+      - mynetwork
+    depends_on:
+      - wordpress
+
+  wordpress:
+    container_name : wordpress
+    env_file:
+      - .env
+    build:
+      context: requirements/wordpress
+      dockerfile: Dockerfile
+    restart : always
+    working_dir: /var/www/html
+    volumes:
+      - /home/bperraud/data/wordpress:/var/www/html
+    ports:
+      - "9000:9000"
+    networks:
+      - mynetwork
+
+  mariadb:
+    container_name : mariadb
+    env_file:
+      - .env
+    build:
+      context: requirements/mariadb
+      dockerfile: Dockerfile
+    restart : always
+    working_dir: /var/lib/mysql
+    volumes:
+      - /home/bperraud/data/mariadb:/var/lib/mysql
+    ports:
+      - "3306:3306"
+    networks:
+      - mynetwork
 
 networks:
-  network:
+  mynetwork:
     driver: bridge
