--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,7 +3,7 @@ FROM alpine:3.15
 # install mariadb
 RUN	apk update && \
 	apk upgrade && \ 
-	apk add mariadb
+	apk add --no-cache mariadb gettext moreutils
 
 RUN mkdir -p /run/mysqld && \
     chown -R mysql:mysql /run/mysqld && \
@@ -17,4 +17,5 @@ COPY tools/entrypoint.sh /tools/
 # execute service
 ENTRYPOINT [ "/tools/entrypoint.sh" ]
 
+USER mysql
 CMD [ "mysqld", "--skip-grant-tables" , "--bind-address 0.0.0.0", "--init-file /tools/init.sql" ]
